.metadata/.plugins/org.eclipse.cdt.ui/BattleShip.build.log
18:32:45 **** Incremental Build of configuration Debug for project BattleShip ****
Info: Internal Builder is used for build
g++ -std=c++1y -O0 -g3 -Wall -c -fmessage-length=0 -Wall -Werror=return-type -o "myCode\\Board.o" "..\\myCode\\Board.cpp" 
..\myCode\Board.cpp:10:1: error: no declaration matches 'Board::Board()'
   10 | Board::Board()
      | ^~~~~
In file included from ..\myCode\Board.cpp:8:
..\myCode\Board.h:13:7: note: candidates are: 'constexpr Board::Board(const Board&)'
   13 | class Board
      |       ^~~~~
..\myCode\Board.h:18:9: note:                 'Board::Board(int, int)'
   18 |         Board(int rows, int columns);
      |         ^~~~~
..\myCode\Board.h:13:7: note: 'class Board' defined here
   13 | class Board
      |       ^~~~~

18:32:46 Build Failed. 1 errors, 0 warnings. (took 459ms)

